--- a/task-h/index.html
+++ b/task-h/index.html
@@ -114,7 +114,7 @@
     © 2025 Task H Example
   </footer>
 
-  <!-- Dark Mode -->
+  <!-- Dark Mode Toggle -->
   <script>
     document.getElementById("themeToggle").addEventListener("click", () => {
       const KEY = "site-theme";
