--- a/task-h/index.html
+++ b/task-h/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Flatpickr CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<!-- Flatpickr JS -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <title>Task H — Form with Table</title>
 
   <!-- bTw -->
@@ -71,7 +75,7 @@
       <!-- Birth Date -->
       <label class="block">
         <span class="font-medium">Birth Date</span>
-        <input type="date" id="birthDate" data-error-target="errBirth"
+        <input type="text" id="birthdate" placeholder="Select your birth date"> data-error-target="errBirth"
           class="mt-1 w-full p-2 rounded border border-gray-300 dark:border-gray-700 bg-gray-100 dark:bg-gray-800" />
         <p id="errBirth" class="hidden text-red-500 text-sm mt-1"></p>
       </label>
