--- a/task-h/index.html
+++ b/task-h/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Flatpickr CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-<!-- Flatpickr JS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <title>Task H — Form with Table</title>
 
@@ -75,8 +73,7 @@
       <!-- Birth Date -->
       <label class="block">
         <span class="font-medium">Birth Date</span>
-        <input type="text" id="birthdate" placeholder="Select your birth date"> data-error-target="errBirth"
-          class="mt-1 w-full p-2 rounded border border-gray-300 dark:border-gray-700 bg-gray-100 dark:bg-gray-800" />
+        <input type="text" id="birthdate" placeholder="Select your birth date" data-error-target="errBirth" class="mt-1 w-full p-2 rounded border border-gray-300 dark:border-gray-700 bg-gray-100 dark:bg-gray-800" />
         <p id="errBirth" class="hidden text-red-500 text-sm mt-1"></p>
       </label>
 
