--- a/task-h/index.html
+++ b/task-h/index.html
@@ -27,7 +27,7 @@
   <!-- Header -->
   <header class="py-4 bg-white dark:bg-gray-900 shadow">
     <div class="max-w-4xl mx-auto px-4 flex justify-between items-center">
-      <h1 class="text-xl font-bold">Task H Demo</h1>
+      <h1 class="text-xl font-bold">Task H</h1>
       <button id="themeToggle"
         class="px-3 py-1.5 rounded bg-gray-200 hover:bg-gray-300 dark:bg-gray-800 dark:hover:bg-gray-700 transition">
          Toggle Theme
@@ -112,7 +112,7 @@
 
   <!-- Footer -->
   <footer class="mt-12 py-6 text-center opacity-70">
-    © 2025 Task H Example
+    © 2025 Task H
   </footer>
 
   <!-- Dark Mode Toggle -->
